fix goddamn flickering issue

--- a/packages/client/src/style.css
+++ b/packages/client/src/style.css
@@ -21,7 +21,7 @@ main {
   outline: solid 1px white;
 }
 
-.gameRenderer > * {
+.game-renderer > * {
   grid-column: 1;
   grid-row: 1;
 }
